--- a/pokemon/templates/pokemonGame.html
+++ b/pokemon/templates/pokemonGame.html
@@ -76,76 +76,87 @@
             <a href="/"><img class="center" src="/static/banner.png" style="width:500px;" alt="Pokebanner"></a><br><br>
         </div>
         {% if databaseCheck == False %}
-        <div class="flexContainer justify-content-center">
-            <div>
-                <div id="player1">
-                    <div class="card center" style="width: 288px; height: 390px;">
-                        <div id="cardBack">
-                            <img src="/static/cardBack.png" class="img-fluid" alt="Back of card">
-                        </div>
-                        <div id="cardFront">
-                            <img class="center card-img-top" src="{{artwork}}" alt="Pokemon Image"
-                                style="width: 200px;">
-                            <div class="card-body">
-                                <h3 class="card-title">{{name}}</h3>
-                            </div>
-                            <div class="stats">
-                                <p class="type1">{{type1.capitalize()}}
-                                {% if type2 != "None" %}
-                                &nbsp;&nbsp;&nbsp;&nbsp;&nbsp;{{type2.capitalize()}}
-                                {% endif %}
-                                </p>
-                                <p class="attack">Attack: {{attack}}</p>
-                                <p class="defence">Defence: {{defence}}</p>
-                            </div>
-                        </div>
-                    </div>
-                </div>
-    
-                <h2><span id="card1Counter" class="badge rounded-pill bg-primary"></span></h2>
-
-            </div>
-            <div id="vs">
-                <img class="center" src="/static/vs.gif" alt="Versus Image" style="width: 200px;">
-            </div>
-
-                <div class="flex-column d-flex justify-content-center" style="width:18rem">
-                    <div id="player2">
+            <div class="flexContainer justify-content-center">
+                <div>
+                    <div id="player1">
+                        <h2><span id="p1Label" class="center badge rounded-pill bg-danger">Player 1</span></h2>
                         <div class="card center" style="width: 288px; height: 390px;">
-                            <img class="center card-img-top" src="{{artwork}}" alt="Pokemon Image"
-                                style="width: 200px;">
-                            <div class="card-body">
-                                <h3 class="card-title">{{name}}</h3>
+                            <div id="cardBack1">
+                                <img src="/static/cardBack.png" class="img-fluid rounded mx-auto d-block" alt="Back of card">
                             </div>
-                            <div class="stats">
-                                <p class="type1">{{type1.capitalize()}}
-                                {% if type2 != "None" %}
-                                &nbsp;&nbsp;&nbsp;&nbsp;&nbsp;{{type2.capitalize()}}
-                                {% endif %}
-                                </p>
-                                <p class="attack">Attack: {{attack}}</p>
-                                <p class="defence">Defence: {{defence}}</p>
-                                
+                            <div id="cardFront1">
+                                <img class="center card-img-top" src="{{artwork}}" alt="Pokemon Image"
+                                    style="width: 200px;">
+                                <div class="card-body">
+                                    <h3 class="card-title">{{name}}</h3>
+                                </div>
+                                <div class="stats">
+                                    <p class="types">{{type1.capitalize()}}
+                                    {% if type2 != "None" %}
+                                    &nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;{{type2.capitalize()}}
+                                    {% endif %}
+                                    </p>
+                                    <p class="attack">Attack: {{attack}}</p>
+                                    <p class="defence">Defence: {{defence}}</p>
+                                </div>
                             </div>
                         </div>
                     </div>
-                    <h2><span id="card2Counter" class="badge rounded-pill bg-primary"></span></h2>
+                    <h2><span id="card1Counter" class="badge rounded-pill bg-primary"></span></h2>
                 </div>
                 
+                <div id="vs">
+                    <img class="center" src="/static/vs.gif" alt="Versus Image" style="width: 200px;">
+                </div>
 
-        </div>
+                <div class="flex-column d-flex justify-content-center" style="width:18rem">
+                    <div>
+                        <div id="player2">
+                            <h2><span id="p2Label" class="center badge rounded-pill bg-danger">Player 2</span></h2>
+                            <div class="card center" style="width: 288px; height: 390px;">
+                                <div id="cardBack2">
+                                    <img src="/static/cardBack.png" class="img-fluid" alt="Back of card">
+                                </div>
+                                <div id="cardFront2">
+                                    <img class="center card-img-top" src="{{artwork}}" alt="Pokemon Image"
+                                        style="width: 200px;">
+                                    <div class="card-body">
+                                        <h3 class="card-title">{{name}}</h3>
+                                    </div>
+                                    <div class="stats">
+                                        <p class="types">{{type1.capitalize()}}
+                                        {% if type2 != "None" %}
+                                        &nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;{{type2.capitalize()}}
+                                        {% endif %}
+                                        </p>
+                                        <p class="attack">Attack: {{attack}}</p>
+                                        <p class="defence">Defence: {{defence}}</p>
+                                    </div>
+                                </div>
+                            </div>
+                        </div>
+                        <h2><span id="card2Counter" class="badge rounded-pill bg-primary"></span></h2>
+                    </div>
+                </div>     
+            </div>
         {% else %}
-        
         <br>
         <h2><span id="back" class="badge rounded-pill bg-danger">No cards available</span></h2>
         {% endif %}
         <br><br>
+        <h2><span id="startButton" class="center badge rounded-pill bg-success" style="width: 200px;">START</span></h2>
         <a href="/">
             <h2><span id="back" class="badge rounded-pill bg-primary">Back to Main Page</span></h2>
         </a>
-
+        
     </div>
-
+      
 </body>
 
 </html>
+
+
+
+<div id="startButton">
+    >
+</div>
