--- a/pokemon/templates/pokemonGame.html
+++ b/pokemon/templates/pokemonGame.html
@@ -85,19 +85,19 @@
                                 <img src="/static/cardBack.png" class="img-fluid rounded mx-auto d-block" alt="Back of card">
                             </div>
                             <div id="cardFront1">
-                                <img class="center card-img-top" src="{{artwork}}" alt="Pokemon Image"
+                                <img class="center card-img-top" src="{{artworkp1}}" alt="Pokemon Image"
                                     style="width: 200px;">
                                 <div class="card-body">
-                                    <h3 class="card-title">{{name}}</h3>
+                                    <h3 class="card-title">{{namep1}}</h3>
                                 </div>
                                 <div class="stats">
-                                    <p class="types">{{type1.capitalize()}}
-                                    {% if type2 != "None" %}
-                                    &nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;{{type2.capitalize()}}
+                                    <p class="types">{{type1p1}}
+                                    {% if type2 != None %}
+                                    &nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;{{type2p1}}
                                     {% endif %}
                                     </p>
-                                    <p class="attack">Attack: {{attack}}</p>
-                                    <p class="defence">Defence: {{defence}}</p>
+                                    <p class="attack">Attack: {{attackp1}}</p>
+                                    <p class="defence">Defence: {{defencep1}}</p>
                                 </div>
                             </div>
                         </div>
@@ -118,19 +118,19 @@
                                     <img src="/static/cardBack.png" class="img-fluid" alt="Back of card">
                                 </div>
                                 <div id="cardFront2">
-                                    <img class="center card-img-top" src="{{artwork}}" alt="Pokemon Image"
+                                    <img class="center card-img-top" src="{{artworkp2}}" alt="Pokemon Image"
                                         style="width: 200px;">
                                     <div class="card-body">
-                                        <h3 class="card-title">{{name}}</h3>
+                                        <h3 class="card-title">{{namep2}}</h3>
                                     </div>
                                     <div class="stats">
-                                        <p class="types">{{type1.capitalize()}}
-                                        {% if type2 != "None" %}
-                                        &nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;{{type2.capitalize()}}
+                                        <p class="types">{{type1p2}}
+                                        {% if type2 != None %}
+                                        &nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;{{type2p2}}
                                         {% endif %}
                                         </p>
-                                        <p class="attack">Attack: {{attack}}</p>
-                                        <p class="defence">Defence: {{defence}}</p>
+                                        <p class="attack">Attack: {{attackp2}}</p>
+                                        <p class="defence">Defence: {{defencep2}}</p>
                                     </div>
                                 </div>
                             </div>
