--- a/pokemon/templates/pokemonCard.html
+++ b/pokemon/templates/pokemonCard.html
@@ -21,14 +21,13 @@
               <h2 class="card-title">{{pokemonCardName}}</h2>
             </div>
             <div class="stats">
+                <p class="types">{{pokemonType1.capitalize()}}
+                {% if pokemonType2 != "None" %}
+                &nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;{{pokeonType2.capitalize()}}
+                {% endif %}
+                </p>
                 <p class="attack">Attack: {{pokemonAttack}}</p>
                 <p class="defence">Defence: {{pokemonDefence}}</p>
-                <p class="type1">Type 1: {{pokemonType1.capitalize()}}</p>
-                {% if pokemonType2 != None %}
-                    <p class="type2">Type 2: {{pokemonType2.capitalize()}}</p>
-                {% else %}
-                    <p class="type2">&nbsp;</p>
-                {% endif %}
             </div>
         </div>
 
