--- a/pokemon/templates/pokemonCard.html
+++ b/pokemon/templates/pokemonCard.html
@@ -18,12 +18,12 @@
         <div class="card center" style="width: 18rem;">
             <img class="center card-img-top" src="{{pokemonArtwork}}" alt="Pokemon Image" style="width: 200px;">
             <div class="card-body">
-              <h2 class="card-title">{{pokemonCardName}}</h2>
+              <h2 class="card-title">{{pokemonCardName.capitalize()}}</h2>
             </div>
             <div class="stats">
                 <p class="types">{{pokemonType1.capitalize()}}
-                {% if pokemonType2 != "None" %}
-                &nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;{{pokeonType2.capitalize()}}
+                {% if pokemonType2 != None %}
+                &nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;{{pokemonType2.capitalize()}}
                 {% endif %}
                 </p>
                 <p class="attack">Attack: {{pokemonAttack}}</p>
